--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-/res filter=lfs diff=lfs merge=lfs -text
+res/ filter=lfs diff=lfs merge=lfs -text
